[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Game.gd" type="Script" id=2]
[ext_resource path="res://src/Level/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Level/ParallaxBackground.tscn" type="PackedScene" id=5]

[node name="Splitscreen" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]

[node name="Black" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
margin_bottom = 3.05176e-05
color = Color( 0, 0, 0, 1 )

[node name="SplitContainer" type="HSplitContainer" parent="Black"]
anchor_right = 1.0
anchor_bottom = 1.0
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer1" type="ViewportContainer" parent="Black/SplitContainer"]
margin_right = 394.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport1" type="Viewport" parent="Black/SplitContainer/ViewportContainer1"]
size = Vector2( 394, 480 )
size_override_stretch = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3
audio_listener_enable_2d = true

[node name="Level" parent="Black/SplitContainer/ViewportContainer1/Viewport1" instance=ExtResource( 3 )]

[node name="Player1" parent="Black/SplitContainer/ViewportContainer1/Viewport1/Level" instance=ExtResource( 4 )]
position = Vector2( 90, 546 )
action_suffix = "_p1"

[node name="Player2" parent="Black/SplitContainer/ViewportContainer1/Viewport1/Level" instance=ExtResource( 4 )]
position = Vector2( 120, 546 )
action_suffix = "_p2"

[node name="ViewportContainer2" type="ViewportContainer" parent="Black/SplitContainer"]
margin_left = 406.0
margin_right = 800.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport2" type="Viewport" parent="Black/SplitContainer/ViewportContainer2"]
size = Vector2( 394, 480 )
size_override_stretch = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3
audio_listener_enable_2d = true

[node name="ParallaxBackground" parent="Black/SplitContainer/ViewportContainer2/Viewport2" instance=ExtResource( 5 )]
